src/test/ui/span/recursive-type-field.stderr
error[E0072]: recursive type `Foo` has infinite size
  --> $DIR/recursive-type-field.rs:13:1
   |
13 |   struct Foo<'a> {
   |  _^ starting here...
14 | |     bar: Bar<'a>,
   | |     ------------ recursive here
15 | |     b: Rc<Bar<'a>>,
   | |     -------------- recursive here
16 | | }
   | |_^ ...ending here: recursive type has infinite size
   |
   = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `Foo` representable

error[E0072]: recursive type `Bar` has infinite size
  --> $DIR/recursive-type-field.rs:18:1
   |
18 |   struct Bar<'a> {
   |  _^ starting here...
19 | |     y: (Foo<'a>, Foo<'a>),
   | |     --------------------- recursive here
20 | |     z: Option<Bar<'a>>,
   | |     ------------------ recursive here
21 | |     a: &'a Foo<'a>,
   | |     -------------- recursive here
22 | |     c: &'a [Bar<'a>],
   | |     ---------------- recursive here
23 | |     d: [Bar<'a>; 1],
   | |     --------------- recursive here
24 | |     e: Foo<'a>,
   | |     ---------- recursive here
25 | |     x: Bar<'a>,
   | |     ---------- recursive here
26 | | }
   | |_^ ...ending here: recursive type has infinite size
   |
   = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `Bar` representable

error: aborting due to 2 previous errors
